--- a/Project_EDP/Project_EDP.csproj
+++ b/Project_EDP/Project_EDP.csproj
@@ -77,6 +77,12 @@
     <Compile Include="student_information.Designer.cs">
       <DependentUpon>student_information.cs</DependentUpon>
     </Compile>
+    <Compile Include="UpdateStatus.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UpdateStatus.Designer.cs">
+      <DependentUpon>UpdateStatus.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="dashboard.resx">
       <DependentUpon>dashboard.cs</DependentUpon>
     </EmbeddedResource>
@@ -98,6 +104,9 @@
     </Compile>
     <EmbeddedResource Include="student_information.resx">
       <DependentUpon>student_information.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="UpdateStatus.resx">
+      <DependentUpon>UpdateStatus.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="Properties\DataSources\MySql.Data.MySqlClient.Authentication.MySqlAuthenticationPlugin.datasource" />
     <None Include="Properties\DataSources\MySql.Data.MySqlClient.Authentication.MySqlClearPasswordPlugin.datasource" />
